[package]
name = "sorts"
version = "0.3.0"
authors = ["Olav de Haas <o.n.dehaas@student.tudelft.nl>"]
description = "A collection of sorting algorithms"
keywords = ["sort", "sorting", "library"]
categories = ["algorithms"]
license = "MIT"
readme = "README.md"

autobenches = false

[dependencies]

[dev-dependencies]
rand = "0.6"
criterion = "0.2"

[[bench]]
name = "sort_benchmark"
harness = false
